@@ -13,13 +13,19 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/animal")
@@ -37,22 +43,51 @@ public class AnimalController {
             security = @SecurityRequirement(name = "bearerAuth"))
     @ApiResponse(responseCode = "200", description = "Retorna lista de animais")
     @GetMapping("/find/all")
-    public ResponseEntity<List<AnimalResponseDTO>> findAll(
-            @RequestParam(required = false) Long orgId) {
+    public ResponseEntity<Map<String, Object>> findAll(
+            @RequestParam(required = false) Long orgId,
+            @RequestParam(defaultValue = "0") int page) {
 
-        if(orgId == null) {
-            List<Animal> animalList = getAllAnimaisCase.execute();
-            return ResponseEntity.ok().body(animalList.stream()
-                    .map(animalMapper::toResponseDTO)
-                    .toList());
+        // Criar o Pageable com PageRequest
+        Pageable pageable = PageRequest.of(page, 5);
+
+        Page<Animal> animalPage;
+        if (orgId == null) {
+            animalPage = getAllAnimaisCase.execute(pageable);
+        } else {
+            animalPage = getAnimaisByOrganizationId.execute(orgId, pageable);
         }
 
-        List<Animal> animalList = getAnimaisByOrganizationId.execute(orgId);
-        return ResponseEntity.ok().body(animalList.stream()
+        // Mapear os resultados para DTOs
+        List<AnimalResponseDTO> animalResponseDTOList = animalPage.stream()
                 .map(animalMapper::toResponseDTO)
-                .toList());
+                .collect(Collectors.toList());
 
+        // Criar a resposta
+        Map<String, Object> response = new HashMap<>();
+        response.put("animals", animalResponseDTOList);
+        response.put("currentPage", animalPage.getNumber());
+        response.put("totalItems", animalPage.getTotalElements());
+        response.put("totalPages", animalPage.getTotalPages());
+
+        return ResponseEntity.ok().body(response);
     }
+//    @GetMapping("/find/all")
+//    public ResponseEntity<List<AnimalResponseDTO>> findAll(
+//            @RequestParam(required = false) Long orgId) {
+//
+//        if(orgId == null) {
+//            List<Animal> animalList = getAllAnimaisCase.execute();
+//            return ResponseEntity.ok().body(animalList.stream()
+//                    .map(animalMapper::toResponseDTO)
+//                    .toList());
+//        }
+//
+//        List<Animal> animalList = getAnimaisByOrganizationId.execute(orgId);
+//        return ResponseEntity.ok().body(animalList.stream()
+//                .map(animalMapper::toResponseDTO)
+//                .toList());
+//
+//    }
 
 
     @PostMapping(value = "/create", consumes = {MediaType.MULTIPART_FORM_DATA_VALUE})
